[gd_scene load_steps=21 format=2]

[ext_resource path="res://Terrain.tscn" type="PackedScene" id=1]
[ext_resource path="res://Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://World.gd" type="Script" id=3]
[ext_resource path="res://assets/Coin/star coin rotate 5.png" type="Texture" id=4]
[ext_resource path="res://Life.tscn" type="PackedScene" id=5]
[ext_resource path="res://NewGameScreen.tscn" type="PackedScene" id=6]
[ext_resource path="res://fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://GameOverScreen.tscn" type="PackedScene" id=9]
[ext_resource path="res://assets/Grasslands Theme.mp3" type="AudioStream" id=10]
[ext_resource path="res://assets/Coin/star coin rotate 1.png" type="Texture" id=11]
[ext_resource path="res://assets/Coin/star coin rotate 3.png" type="Texture" id=12]
[ext_resource path="res://assets/Coin/star coin rotate 2.png" type="Texture" id=13]
[ext_resource path="res://assets/Coin/star coin rotate 4.png" type="Texture" id=14]
[ext_resource path="res://assets/Coin/star coin rotate 6.png" type="Texture" id=15]
[ext_resource path="res://assets/Key/key.png" type="Texture" id=16]

[sub_resource type="DynamicFont" id=3]
size = 28
font_data = ExtResource( 7 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 11 ), ExtResource( 13 ), ExtResource( 12 ), ExtResource( 14 ), ExtResource( 4 ), ExtResource( 15 ) ],
"loop": true,
"name": "idle",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 50000, 10 )

[sub_resource type="Environment" id=2]
background_mode = 4
dof_blur_far_amount = 0.32
dof_blur_near_quality = 2

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 52.5, 63.75 )

[node name="World" type="Node2D"]
position = Vector2( -2, 81 )
scale = Vector2( 0.8, 0.8 )
script = ExtResource( 3 )

[node name="Terrain" parent="." instance=ExtResource( 1 )]
scale = Vector2( 3, 3 )
cell_size = Vector2( 18, 18 )
tile_data = PoolIntArray( -720897, 0, 196623, -655361, 0, 196623, -589825, 0, 196623, -524289, 0, 196623, -458753, 0, 196623, -393217, 0, 196623, -327681, 0, 196623, -262145, 0, 196623, -196609, 0, 196623, -131073, 0, 196623, -65537, 0, 196623, -130986, 0, 196622, -1, 0, 196623, -65450, 0, 196622, 65535, 0, 196623, 86, 0, 131086, 131071, 0, 196623, 65549, 0, 65538, 65550, 0, 65538, 65604, 0, 65538, 65622, 0, 131086, 196607, 0, 196623, 131158, 0, 131086, 262143, 0, 196623, 196694, 0, 131086, 327679, 0, 196623, 262150, 0, 14, 262151, 0, 13, 262152, 0, 12, 262153, 0, 13, 262154, 0, 15, 262166, 0, 65538, 262167, 0, 65538, 262168, 0, 65538, 262169, 0, 65538, 262205, 0, 65538, 262230, 0, 131086, 393215, 0, 196623, 327688, 0, 65548, 327764, 0, 327690, 327765, 0, 327690, 327766, 0, 131086, 458751, 0, 196623, 393224, 0, 65548, 393285, 0, 65538, 393300, 0, 393226, 393301, 0, 393226, 393302, 0, 131086, 524287, 0, 196623, 458760, 0, 65548, 458836, 0, 458762, 458837, 0, 458762, 458838, 0, 131086, 589823, 0, 196623, 524288, 0, 65538, 524289, 0, 65538, 524290, 0, 65538, 524291, 0, 65538, 524292, 0, 65538, 524293, 0, 65538, 524294, 0, 65538, 524295, 0, 65538, 524296, 0, 65538, 524297, 0, 65538, 524298, 0, 65538, 524305, 0, 65538, 524306, 0, 65538, 524318, 0, 65538, 524319, 0, 65538, 524320, 0, 65538, 524321, 0, 65538, 524322, 0, 65538, 524323, 0, 65538, 524324, 0, 65538, 524325, 0, 65538, 524326, 0, 65538, 524327, 0, 65538, 524328, 0, 65538, 524329, 0, 65538, 524330, 0, 65538, 524331, 0, 65538, 524332, 0, 65538, 524340, 0, 65538, 524341, 0, 65538, 524342, 0, 65538, 524343, 0, 65538, 524364, 0, 65538, 524365, 0, 65538, 524366, 0, 65538, 524367, 0, 65538, 524368, 0, 65538, 524369, 0, 65538, 524370, 0, 65538, 524371, 0, 65538, 524372, 0, 65538, 524373, 0, 65538, 524374, 0, 131086, 655359, 0, 196623, 589824, 0, 4, 589825, 0, 4, 589826, 0, 4, 589827, 0, 4, 589828, 0, 4, 589829, 0, 4, 589830, 0, 4, 589831, 0, 4, 589832, 0, 4, 589833, 0, 65540, 589834, 0, 65540, 589854, 0, 65540, 589855, 0, 65540, 589856, 0, 65540, 589857, 0, 65540, 589858, 0, 65540, 589859, 0, 65540, 589860, 0, 65540, 589861, 0, 65540, 589862, 0, 65540, 589863, 0, 65540, 589864, 0, 65540, 589865, 0, 65540, 589866, 0, 65540, 589867, 0, 65540, 589868, 0, 65540, 589900, 0, 65540, 589901, 0, 65540, 589902, 0, 65540, 589903, 0, 65540, 589904, 0, 65540, 589905, 0, 65540, 589906, 0, 65540, 589907, 0, 65540, 589908, 0, 65540, 589909, 0, 65540, 589910, 0, 131086, 720895, 0, 196623, 655360, 0, 65540, 655361, 0, 65540, 655362, 0, 65540, 655363, 0, 65540, 655364, 0, 65540, 655365, 0, 65540, 655366, 0, 65540, 655367, 0, 65540, 655368, 0, 65540, 655369, 0, 65540, 655370, 0, 65540, 655390, 0, 65540, 655391, 0, 65540, 655392, 0, 65540, 655393, 0, 65540, 655394, 0, 65540, 655395, 0, 65540, 655396, 0, 65540, 655397, 0, 65540, 655398, 0, 65540, 655399, 0, 65540, 655400, 0, 65540, 655401, 0, 65540, 655402, 0, 65540, 655403, 0, 65540, 655404, 0, 65540, 655423, 0, 65538, 655436, 0, 65540, 655437, 0, 65540, 655438, 0, 65540, 655439, 0, 65540, 655440, 0, 65540, 655441, 0, 65540, 655442, 0, 65540, 655443, 0, 65540, 655444, 0, 65540, 655445, 0, 65540, 655446, 0, 131086, 720896, 0, 4, 720897, 0, 4, 720898, 0, 4, 720899, 0, 4, 720900, 0, 4, 720901, 0, 4, 720902, 0, 4, 720903, 0, 4, 720904, 0, 4, 720905, 0, 4, 720906, 0, 4, 720926, 0, 4, 720927, 0, 4, 720928, 0, 4, 720929, 0, 4, 720930, 0, 4, 720931, 0, 4, 720932, 0, 4, 720933, 0, 4, 720934, 0, 4, 720935, 0, 4, 720936, 0, 4, 720937, 0, 4, 720938, 0, 4, 720939, 0, 4, 720940, 0, 4, 720972, 0, 65540, 720973, 0, 65540, 720974, 0, 65540, 720975, 0, 65540, 720976, 0, 65540, 720977, 0, 65540, 720978, 0, 65540, 720979, 0, 65540, 720980, 0, 65540, 720981, 0, 65540, 720982, 0, 131086, 786508, 0, 65540, 786509, 0, 65540, 786510, 0, 65540, 786511, 0, 65540, 786512, 0, 65540, 786513, 0, 65540, 786514, 0, 65540, 786515, 0, 65540, 786516, 0, 65540, 786517, 0, 65540, 786518, 0, 131086 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 257.5, 378.75 )
collision_mask = 112

[node name="Camera2D" type="Camera2D" parent="Player"]
position = Vector2( 4.75, 0 )
current = true
limit_left = 0
limit_right = 3715
limit_bottom = 600
limit_smoothed = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true

[node name="CanvasLayer" type="CanvasLayer" parent="Player"]

[node name="Life1" parent="Player/CanvasLayer" instance=ExtResource( 5 )]
position = Vector2( 1003, 24 )

[node name="Life2" parent="Player/CanvasLayer" instance=ExtResource( 5 )]
position = Vector2( 968, 24 )

[node name="Life3" parent="Player/CanvasLayer" instance=ExtResource( 5 )]
position = Vector2( 933, 24 )

[node name="CoinCount" type="Label" parent="Player/CanvasLayer"]
margin_left = 42.0
margin_top = 3.0
margin_right = 98.0
margin_bottom = 84.0
custom_fonts/font = SubResource( 3 )
text = "0
"

[node name="CoinIcon" type="AnimatedSprite" parent="Player/CanvasLayer"]
position = Vector2( 23, 20 )
scale = Vector2( 0.01, 0.01 )
frames = SubResource( 5 )
animation = "idle"
frame = 4
playing = true

[node name="Key" type="Sprite" parent="Player/CanvasLayer"]
visible = false
position = Vector2( 87, 22 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 16 )

[node name="Hints" type="Label" parent="Player/CanvasLayer"]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -124.5
margin_top = 100.0
margin_right = 124.5
margin_bottom = 14.0
text = "Maybe a key could open these doors..."

[node name="KillPlane" type="Area2D" parent="."]
position = Vector2( 1080, 700 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="KillPlane"]
shape = SubResource( 1 )

[node name="NewGameScreen" parent="." instance=ExtResource( 6 )]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 2 )

[node name="Doors" type="Area2D" parent="."]
position = Vector2( 4588.75, 383.75 )
collision_layer = 64
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Doors"]
position = Vector2( 2.50146, -9.99991 )
shape = SubResource( 4 )

[node name="GameOverScreen" parent="." instance=ExtResource( 9 )]
visible = false

[node name="GameSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 10 )

[connection signal="collect_coin" from="Player" to="." method="_on_Player_collect_coin"]
[connection signal="game_over" from="Player" to="." method="_on_Player_game_over"]
[connection signal="grab_key" from="Player" to="." method="_on_Player_grab_key"]
[connection signal="body_entered" from="KillPlane" to="." method="_on_KillPlane_body_entered"]
[connection signal="start_game" from="NewGameScreen" to="." method="_on_New_Game_start_game"]
[connection signal="body_entered" from="Doors" to="." method="_on_Doors_body_entered"]
[connection signal="body_exited" from="Doors" to="." method="_on_Doors_body_exited"]
